# Confoundr

./: .gitignore  Dockerfile  README.MD  docker-compose.yml  prometheus.yml  pyproject.toml  render.yaml
.github/workflows/: publish.yml
Documentation/: architecture.md  checks_catalog.md  confoundr_project_plan.md  educational_guide.md  roadmap.md  threat_model.md  timeline_and_issues.md
api/: database.py  jobs.py  llm.py  main.py  models.py  worker.py
confoundr/: __init__.py  base.py  cli.py  schemas.py
confoundr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
confoundr/checks/: __init__.py  confounder.py  leakage.py  positivity.py
data/: clean_dataset.csv  confounded_dataset.csv  leaky_dataset.csv  positivity_violation_dataset.csv
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/job/[id]/: page.tsx
scripts/: generate_synthetic_data.py
tests/: test_confounder.py  test_leakage.py  test_positivity.py
